--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -15,6 +15,10 @@
           <span class="main-title-gradient">Welcome</span> to Gallery
         </h1>
       </div>
+
+      <div class="container">
+        <ul class="gallery"></ul>
+      </div>
     </main>
 
     <script type="module" src="./js/1-gallery.js"></script>
